# curl2sqlite

./: Cargo.toml  targets.txt
src/: main.rs
