[package]
name = "rust_curl_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"]  }
rusqlite = "0.26"
tokio = { version = "1", features = ["full"]  }
clap = "3.0"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
